--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,33 @@
 #content{
-    border: 2px solid rgb(0, 0, 0);
-    min-height: 40px;
-    min-width: 40px;
+    height: 640px;
+    width: 640px;
+    display: grid;
+    grid-template-columns: repeat(16, 40px);
+    margin: auto;
+    padding-top: 20px;
 }
 
 .square{
     border: 2px solid rgb(0, 0, 0);
-    height: 40px;
-    width: 40px;
+    height: 36px;
+    width: 36px;
+}
+
+.painted{
+    background-color:rgb(0, 0, 0);
+}
+
+#reset{
+    width: 300px;
+    height: 35px;
+    display: block;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#mainContainer{
+    width: 700px;
+    height: 740px;
+    background-color: rgb(170, 170, 170);
 }
